--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
-logging.level.org.springframework = debug
+logging.level.org.springframework = info
 spring.messages.basename = messages
+management.endpoints.web.exposure.include=*
+
+#management.security.enabled=false
+#spring.security.user.name=tejas
+#spring.security.user.password=wonder
+
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
